--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,9 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="C:\Users\Cheshire Cat\Desktop\Coding\JS\to-do-angular\to-do\src\favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+  <to-do-root></to-do-root>
 </body>
 </html>
